--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-# CSS Exercise
-
-### Vertical Navbar
-
-```
 body {
   margin: 0px;
 }
@@ -17,16 +12,21 @@ nav {
 
 ul {
   margin: 0px;
+  padding-top: 100px;
+  padding-left: 20px;
   list-style-type: none; /* delete marker */
+}
+
+li {
+  padding: 10px;
 }
 
 a {
   display: block; /* vertical */
   text-decoration: none; /* delete underline */
+  color: black;
 }
 
 .content {
   margin-left: 25%; /* next to the navbar, rest of the space */
 }
-
-```
