--- a/style.css
+++ b/style.css
@@ -29,4 +29,19 @@ a {
 
 .content {
   margin-left: 25%; /* next to the navbar, rest of the space */
+  height: 100%;
+}
+
+.following {
+  display: flex;
+  width: 100%;
+  height: 150px;
+}
+
+.recent {
+  margin: 10px;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  background-color: gray;
 }
